# consistent-viterbi

./: .gitignore  Cargo.toml  launch_exp.py
datasets/ar/: house-A.csv  house-B.csv  house-C.csv
src/: main.rs  utils.rs  viterbi_solver.rs
src/hmm/: hmm.rs
src/viterbi_solver/: cfn.rs  constraints.rs  cp.rs  dp.rs  hmm.rs  lagrangian.rs  opti.rs  utils.rs  viterbi.rs
tagged_corpora/: get_data.py
