[package]
name = "consistent-viterbi"
version = "0.1.0"
authors = ["Alexandre Dubray <alexandre.dubray@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ndarray = "0.15.0"
ndarray-csv = "0.5.1"
ndarray-stats = "0.5.0"
gurobi = "0.3.4"
rand = "0.8.4"
structopt = "0.3.23"
